Can only see the necessary publications